--- a/bonus/index.html
+++ b/bonus/index.html
@@ -76,14 +76,16 @@
             <div class="col-8" id="costo"></div>
         </section>
         <section class="second-section row margin-top">
+            <h1 class="col-12">Offerta</h1>
             <div class="col-4">
-               <a href="#" onclick="narnia()"> <img src="./img/narnia.jpg" alt=""></a>
+               <a href="#"> <img src="./img/narnia.jpg" alt=""></a>
             </div>
             <div class="col-4">
                 <a href="#"> <img src="./img/maze.jpg" alt=""></a>
             </div>
             <div class="col-4">
                 <a href="#"> <img src="./img/bladerunner.jpg" alt=""></a>
+
 
             </div>
             <div class="col-4" id="narnia">
